# ai-dev-tools-zoomcamp

./: .gitignore  README.md
.42c/: conf.yaml
01-todo/: Homework_form.md  README.md  makefile  readme.md
01-todo/todo/: settings.py
01-todo/todoapp/: models.py  tests.py  urls.py  views.py
02-coding_platform/: .gitignore  AGENTS.md  Dockerfile.render  README.md  docker-compose.yml  homework.md  package-lock.json  package.json
02-coding_platform/backend/: README.md  package-lock.json  package.json  tsconfig.json
02-coding_platform/docs/: API_REST.md  API_WEBSOCKETS.md  CI_CD_PLAN.md  DEPLOYMENT.md  OVERVIEW.md  REQUIREMENT.md  RUNTIME_WASM.md  SYSTEM_DESIGN.md  frontend.md
02-coding_platform/frontend/: .env.example  index.html  package-lock.json  (+3 more)
02-snake_game/: .gitignore
02-snake_game/backend/: AGENTS.md  pyproject.toml
02-snake_game/backend/app/: __init__.py
02-snake_game/backend/app/core/: store.py
02-snake_game/backend/app/routers/: auth.py  leaderboard.py
02-snake_game/backend/app/schemas/: auth.py  leaderboard.py  live_games.py  user.py
02-snake_game/backend/tests/: test_api.py
03-mcp/: .gitignore  AGENTS.md  README.md  config.py  homework.md  main.py  pyproject.toml  scrape.py  search.py  server_config.yaml  test_scrape.py  test_search.py
03-mcp/notebooks/: search.ipynb
04-coding_agent/: .gitignore  README.md  cli.py  config.yaml  main.py  pyproject.toml
04.1-todo_agent_version/: Homework_form.md  README.md
Tutorial_use_cases/03-mcp-ai-dev-tools-airflow3_test/: .gitignore  README.md  main.py  pipeline.md  pyproject.toml
(+88 files in other folders)
