[project]
name = "03-mcp"
version = "1.0.0"
description = "FastMCP documentation MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.1",
    "minsearch>=0.0.7",
    "pyyaml>=6.0.1",
    "requests>=2.32.5",
]

[project.scripts]
hw3-mcp = "main:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "config", "scrape", "search"]
