[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "openapi-spec-validator>=0.7.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.38.0",
]
