[project]
name = "mcp-ai-dev-tools-airflow3-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.*",
    "duckdb>=1.4.2",
    "google-api-python-client>=2.187.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]
